Added "none" charge model as suggested by Scott Brozell.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4364 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,9 +3,10 @@ set(SOVERSION 4)
 set(LIBRARY_VERSION 4.0.0)
 
 set(charges
-  charges/gasteiger.cpp
-  charges/mmff94.cpp
   charges/eem.cpp
+  charges/gasteiger.cpp
+  charges/none.cpp
+  charges/mmff94.cpp
 )
 
 if (EIGEN2_FOUND)
