TextFormat writes OBText objects
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4421 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -64,7 +64,9 @@ set(ops
   ops/fillUC.cpp
   ops/forcefield.cpp
   ops/gen3d.cpp
+  ops/largest.cpp
   ops/loader.cpp
+  ops/opalign.cpp
   ops/optransform.cpp
   ops/partialcharges.cpp
   ops/readconformers.cpp
