Fix messages from GUI, INCHI to allow use of ccmake tool. Thanks to Andrew Fant for the heads-up.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4429 71e0b675-c112-0410-beda-96664073b5c2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,7 +131,7 @@ if(OPENBABEL_USE_SYSTEM_INCHI)
     message(FATAL_ERROR "Inchi library not found.")
   endif()
 else()
-  message("Using included inchi library.")
+  message(STATUS "Using included inchi library.")
   set(INCHI_LIBRARIES inchi)
 endif()
 
@@ -403,15 +403,15 @@ else ()
 endif()
 
 if(BUILD_GUI)
-  message("Attempting to build the GUI")
+  message(STATUS "Attempting to build the GUI")
   if(wxWidgets_FOUND)
-    message("   wxWidgets found => GUI will be built")
+    message(STATUS "   wxWidgets found => GUI will be built")
     add_subdirectory(src/GUI)
   else()
-    message("   wxWidgets not found => GUI will not be built")
+    message(STATUS "   wxWidgets not found => GUI will not be built")
   endif()
 else()
-  message("GUI will not be built")
+  message(STATUS "GUI will not be built")
 endif()
 
 # Do we want to build the tests?
