Update pointgroup perception with better tolerances and a fallback tree to assign an enum symbol. (e.g., not-quite symmetric benzene = C6h)
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4433 71e0b675-c112-0410-beda-96664073b5c2

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -16,7 +16,8 @@ else(MINIMAL_BUILD)
         obprop
         obrotamer
         obrotate
-  )
+        obsym
+     )
 endif(MINIMAL_BUILD)
 
 INCLUDE(CheckFunctionExists)
