OBGroupContrib: Ensure all exported API cpp code is inside the openbabel library.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4441 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -112,6 +112,7 @@ set(openbabel_srcs
   graphsym.cpp
   grid.cpp
   griddata.cpp
+  groupcontrib.cpp
   isomorphism.cpp
   kekulize.cpp
   locale.cpp
