Add unit test for writing stereo bond flags.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4442 71e0b675-c112-0410-beda-96664073b5c2

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,6 +24,7 @@ set(tests
     spectrophore
     squareplanar
     stereo
+    stereobonds
     stereoperception
     tetrahedral
     tetranonplanar
