Initial changes to support Eigen3
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4483 71e0b675-c112-0410-beda-96664073b5c2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -396,7 +396,7 @@ include_directories(${openbabel_BINARY_DIR}/include
 #cjh
 find_package(Eigen2) # find and setup Eigen2
 if(EIGEN2_FOUND)
-  add_definitions (-DHAVE_EIGEN2)
+  add_definitions (-DHAVE_EIGEN)
   include_directories(${EIGEN2_INCLUDE_DIR})
 endif()
 #cjh
