CMakeLists.txt, formats/CMakeLists.txt, FindCairo.cmake: Add Cmake build support for PNG depiction on Linux. On Ubuntu, install libcairo2-dev if you want PNG depiction.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4490 71e0b675-c112-0410-beda-96664073b5c2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -401,6 +401,13 @@ if(EIGEN2_FOUND)
 endif()
 #cjh
 
+find_package(Cairo)
+if(CAIRO_FOUND)
+  message(STATUS "Cairo found. PNG output will be supported.")
+else(CAIRO_FOUND)
+  message(STATUS "Could NOT find Cairo. PNG output will NOT be supported.")
+endif(CAIRO_FOUND)
+
 add_subdirectory(include)
 add_subdirectory(data)
 add_subdirectory(doc)
