Rename OBGUI to obgui in keeping with the other executables.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4521 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(SRCS
      OBGUI.cpp stdwx.cpp optswx.cpp OBGUI.rc)
 include_directories(.)
-add_executable(OBGUI WIN32 ${SRCS} ${HDRS})
+add_executable(obgui WIN32 ${SRCS} ${HDRS})
 if(WIN32)
   set(wxWidgets_LIBRARIES ${wxWidgets_LIBRARIES} comctl32.lib)
 endif(WIN32) 
