Add op --addfilename
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4597 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -57,6 +57,7 @@ if(EIGEN2_FOUND OR EIGEN3_FOUND)
 endif()
 
 set(ops
+  ops/addfilename.cpp
   ops/addinindex.cpp
   ops/addpolarh.cpp
   ops/canonical.cpp
