Add initial Aces (tested with AcesII for now) output parsing and trivial input file (ZMAT) output
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4626 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/formats/CMakeLists.txt
+++ b/src/formats/CMakeLists.txt
@@ -18,6 +18,7 @@ set(formats_utility
   titleformat
   )
 set(formats_compchem
+      acesformat
       abinitformat
       adfformat
       castepformat
