Add support for using Eigen 3, if found. Default to using Eigen3 over Eigen2 if installed.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4628 71e0b675-c112-0410-beda-96664073b5c2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -394,10 +394,16 @@ include_directories(${openbabel_BINARY_DIR}/include
 )
 
 #cjh
-find_package(Eigen2) # find and setup Eigen2
-if(EIGEN2_FOUND)
-  add_definitions (-DHAVE_EIGEN)
-  include_directories(${EIGEN2_INCLUDE_DIR})
+find_package(Eigen3)
+if(EIGEN3_FOUND)
+  add_definitions(-DHAVE_EIGEN -DHAVE_EIGEN3)
+  include_directories(${EIGEN3_INCLUDE_DIR})
+else()
+  find_package(Eigen2) # find and setup Eigen2
+  if(EIGEN2_FOUND)
+    add_definitions (-DHAVE_EIGEN)
+    include_directories(${EIGEN2_INCLUDE_DIR})
+  endif()
 endif()
 #cjh
 
